--- a/config/ctrl_param_fpv.yaml
+++ b/config/ctrl_param_fpv.yaml
@@ -6,6 +6,7 @@ mass        : 1.0 # kg
 gra         : 9.81 
 # hov_percent : 0.4694   # Thrust percentage in Stabilize/Arco mode 0.11736
 hov_percent : 0.72
+# hov_percent : 0.1355
 # full_thrust : 16.7176   # Real net thrust(unit:N) in 100% thrust percentage 13.6
 full_thrust: 13.6
 
@@ -33,24 +34,24 @@ auto_takeoff_land:
     takeoff_land_speed: 0.3 # m/s
 
 thrust_model: # The model that maps thrust signal u(0~1) to real thrust force F(Unit:N): F=K1*Voltage^K2*(K3*u^2+(1-K3)*u). 
-    print_value: false # display the value of “thr_scale_compensate” or “hover_percentage” during thrust model estimating.
+    print_value: true # display the value of “thr_scale_compensate” or “hover_percentage” during thrust model estimating.
     accurate_thrust_model: false  # This can always enabled if don't require accurate control performance :-)
     # accurate thrust mapping parameters
     K1: 0.7583 # Needs precise calibration!
     K2: 1.6942 # Needs precise calibration!
     K3: 0.6786 # Needs precise calibration! K3 equals THR_MDL_FAC in https://docs.px4.io/master/en/config_mc/pid_tuning_guide_multicopter.html.
     # approximate thrust mapping parameters
-    hover_percentage: 0.72  # Thrust percentage in Stabilize/Arco mode # * 0.72
+    hover_percentage: 0.1355  # Thrust percentage in Stabilize/Arco mode # * 0.72
    
 gain: 
     normal:
         # Cascade PID controller. Recommend to read the code.
-        Kp0: 3.5
-        Kp1: 3.5
-        Kp2: 3.5
-        Kv0: 3.5
-        Kv1: 3.5
-        Kv2: 3.5
+        Kp0: 2.5
+        Kp1: 2.5
+        Kp2: 2.5
+        Kv0: 2.5
+        Kv1: 2.5
+        Kv2: 2.5
         # ↓↓↓ No use now --
         Kvi0: 0.0
         Kvi1: 0.0
@@ -84,8 +85,10 @@ gain:
         Ka0: 1.0
         Ka1: 1.0
         Ka2: 1.0
-        Kyaw: 10.0 # 15.0
-        Krp: 30.0 #25
+        Kyaw: 1.0 # 15.0
+        # Kyaw: 10.0 # 15.0
+        Krp: 3.0 #25
+        # Krp: 30.0 #25
 rotor_drag:  
     x: 0.0  # The reduced acceleration on each axis caused by rotor drag. Unit:(m*s^-2)/(m*s^-1).
     y: 0.0  # Same as above
